Ax-Admin/cd/k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: ax-admin
  annotations:
    konghq.com/plugins: prometheus
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: kong
  rules:
    - host: api.jebsen.com
      http:
        paths:
          - backend:
              service:
                name: ax-admin
                port:
                  name: http
            path: /ax-admin/web
            pathType: ImplementationSpecific
